# elkato-api

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.frontend  README.md
deploy/: 010-ImageStreams.yaml  020-Build-frontend.yaml  020-Build-proxy.yaml  020-Build.yaml  030-Deployment-frontend.yaml  030-Deployment-proxy.yaml  030-Deployment.yaml  040-Service.yaml  050-Route.yaml
elkato-client/: Cargo.toml  README.md
elkato-client/examples/: list.rs
elkato-client/src/: client.rs  config.rs  lib.rs  parser.rs
elkato-common/: Cargo.toml
elkato-common/src/: data.rs
elkato-frontend/: Cargo.toml  nginx.conf  package-lock.json  package.json  webpack.config.js
elkato-frontend/src/: app.rs  current.rs  data.rs  lib.rs
elkato-frontend/static/: index.html
elkato-proxy/: Cargo.toml
elkato-proxy/src/: main.rs
src/: client.rs  data.rs  main.rs  parser.rs
test/: Dockerfile  index.html  nginx.conf
