[package]
name = "elkato-client"
version = "0.1.0"
authors = ["Jens Reimann <ctron@dentrassi.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

anyhow = "1"
log = "0.4"

futures = "0.3"

url = "2"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
nom = "5"

htmlescape = "0.3"

chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.5"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
env_logger = "0.7"
