[package]
name = "elkato-client"
version = "0.1.0"
authors = ["Jens Reimann <ctron@dentrassi.de>"]
edition = "2018"

[dependencies]

anyhow = "1"
log = "0.4"

futures = "0.3"

url = "2"
reqwest = { version = "0.10", features = ["json"], optional = true }
tokio = { version = "0.2", features = ["full"], optional = true }
nom = "5"

htmlescape = "0.3"

chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.5"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

elkato-common = { path = "../elkato-common" }

[features]
default = ["client"]
client = ["reqwest", "tokio"]

[dev-dependencies]
env_logger = "0.7"
