[package]
name = "elkato-frontend"
version = "0.1.0"
authors = ["Jens Reimann <jreimann@redhat.com>"]
edition = "2018"
readme = "README.md"
description = "Addon-on frontend for Elkato"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1"

yew = "0.17"
yew-router = "0.14"

wasm-bindgen = "0.2"

elkato-common = { path = "../elkato-common" }
elkato-client = { path = "../elkato-client", features = [], default-features = false }

chrono = { version = "0.4", features = ["wasmbind"] }
chrono-tz = "0.5"

url = "2"
percent-encoding = "2"
serde = "1"
serde_json = "1"

log = "0.4"
wasm-logger = "0.2"

headers = "0.3"

patternfly-yew = "0.0.11"
